
    refer to DecryptBuf's man-page for further details.

  * Redesigned EncryptBuf
        - Discontinued:
            setKey()
            setIV()

    refer to EncryptBuf's man-page for further details.

  * Selector::wait() returns 0 when its read, write and except file descriptor
    sets are empty.

  * IRandStream and Randbuffer expect a size_t seed (used to be: long seed);

  * Fixed a memory leak in RandBuffer

  * Fixed flaw in Log's FBB::fnl handling

  * Added class OMutexStream for mutex protected ostream operations.




bobcat (4.09.00)

  * The class Log unconditionally inserts level-free messages; level
    objects may be inserted anywhere in insertion statements.

  * The Log and level man pages were updated accordingly.

  * The class DateTime was completely rewritten, using a Pimpl approach using
    the this-pointer instead of a separate data member.

  * The members 'int pSync()', defined in IOStreambuf, LogBuffer,
    MultiStreambuf, OFdStreambuf, OFoldStreambuf, OHexStreambuf, Syslogbuf,
    and TableBuf are superfluous. They still exists (as private members), but
    throw an FBB::Exception{ 1 } when called, and are removed at the next
    major bobcat release. Man-pages were updated accordingly.

  * The member `std::streamsize pXsputn(...)' defined in IOStreambuf is
    superfluous. 

  * Overridding members declared as 'virtual' are now declared as 'override'.

  * Added the overriding members `xsputn' to OfdStreambuf and Syslogbuf

  * Updated the Pattern man-page

  * Internal headers include bobcat headers using "../classname/classname"
    instead of <bobcat/classname>.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 22 Jan 2019 20:59:27 +0100

bobcat (4.08.06)

  * Added Exception::factory members returning stream objects, added
    Exception::open members accepting two ios::openmode arguments.

  * Repaired flaws in man-pages.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 17 Dec 2018 09:44:20 +0100
 
bobcat (4.08.05)
