@@ -62,8 +62,6 @@ struct MultiStreambuf: public std::streambuf
         void setOnce();             // reset all `RESET' modes to `ONCE'
         
     private:
-        int pSync();                // see the 4.09.00 changelog
-
         int overflow(int c) override;
         std::streamsize xsputn(char const *buffer, std::streamsize n) 
                                                                 override;
