@@ -1,7 +1,0 @@
-#include "multistreambuf.ih"
-
-int MultiStreambuf::pSync()
-{
-    throw Exception{ 1 } << __FILE__ << ": obsolete, use sync()";
-}
-
