@@ -47,8 +47,6 @@ class OFdStreambuf: public std::streambuf
         void close();                                       // .f
 
     private:
-        int pSync();    // see the 4.09.00 changelog
-
         int sync() override;
         int overflow(int c) override;
 
