@@ -24,8 +24,6 @@ class OHexStreambuf: public OFilterStreambuf
                                                             // contents not
                                                             // checked
     private:
-        int pSync();                // see the 4.09.00 changelog
-
         int overflow(int ch) override;
         int sync() override;
 };
