@@ -1,6 +1,0 @@
-#include "ohexstreambuf.ih"
-
-int OHexStreambuf::pSync()
-{
-    throw Exception{ 1 } << __FILE__ << ": obsolete, use sync()";
-}
