@@ -1,6 +1,0 @@
-#include "tablebuf.ih"
-
-int TableBuf::pSync()
-{
-    throw Exception{ 1 } << __FILE__ << ": obsolete, use sync()";
-}
